// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns fixture elements: src/__fixtures__/Controls.tsx 1`] = `
Array [
  <pre>
    {
  "string": "How are you doing?",
  "number": 1989,
  "boolean": true,
  "object": {
    "isAdmin": true,
    "name": "Pat D",
    "age": 44
  },
  "array": [
    {
      "isAdmin": true,
      "name": "Pat D",
      "age": 44
    },
    {
      "isAdmin": false,
      "name": "Dan B",
      "age": 39
    }
  ]
}
  </pre>,
  <div>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Option 1
    </button>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Option 2
    </button>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Option 3
    </button>
  </div>,
]
`;

exports[`returns fixture elements: src/__fixtures__/HelloWorld.ts 1`] = `"Hello World!"`;

exports[`returns fixture elements: src/__fixtures__/Props.tsx 1`] = `
<pre>
  {
  "string": "How are you doing?",
  "number": 1989,
  "boolean": false,
  "object": {
    "string": "Pretty good can't complain",
    "number": 1337,
    "object": {
      "number": 555
    },
    "null": null,
    "unserializable": {}
  }
}
</pre>
`;

exports[`returns fixture elements: src/Counter/Counter.fixture.tsx default 1`] = `
<button
  onClick={[Function]}
>
  0
   
  times
</button>
`;

exports[`returns fixture elements: src/Counter/Counter.fixture.tsx large number 1`] = `
<button
  onClick={[Function]}
>
  555555555
   
  times
</button>
`;

exports[`returns fixture elements: src/Counter/Counter.fixture.tsx small number 1`] = `
<button
  onClick={[Function]}
>
  5
   
  times
</button>
`;

exports[`returns fixture elements: src/CounterButton/CounterButton.fixture.tsx 1`] = `
<button
  onClick={[Function]}
>
  0
   
  times
</button>
`;

exports[`returns fixture elements: src/NestedDecorators/NestedDecorators.fixture.tsx 1`] = `
<span>
  (layout:
  wide
   
  <span>
    (Formik 
    <span>
      (Intl 
      <span>
        (name: 
        name
        , label: 
        Your Name
        )
      </span>
      )
    </span>
    )
  </span>
  )
</span>
`;

exports[`returns fixture elements: src/WelcomeMessage/WelcomeMessage.fixture.tsx 1`] = `
<div
  style={
    Object {
      "border": "2px dashed #AAA",
      "borderRadius": 8,
      "padding": "0 16px",
    }
  }
>
  <h1>
    Hi
     
    <strong>
      Maggie
    </strong>
    !
  </h1>
</div>
`;
